spacing fixed

--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ section {
   margin: 0;
   justify-content: flex-start;
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
   margin-top: 0.5rem;
 }
 
@@ -282,11 +282,13 @@ section {
   height: 2.5rem;
   width: 2.5rem;
   opacity: 0.8;
+  color: var(--highlight-color);
 }
 
 #socials-container .icon:hover {
   transform: translateY(-3px);
   opacity: 1;
+  color: var(--highlight-color);
 }
 
 /* ICONS */
